--- a/Client/src/components/Filters/Filters.css
+++ b/Client/src/components/Filters/Filters.css
@@ -1,209 +1,13 @@
-.filter-form {
-  padding-top: 3rem;
-}
-
-.input-icon-wrapper {
-  position: relative;
-  width: 100%;
-}
-
-.input-with-icon {
-  padding-left: 40px; /* Espacio para el ícono */
-}
-.input-with-icon div {
-  border: white ;
-}
-
-/* Estilo para los íconos dentro de los inputs */
-.input-icon-placeholder {
-  position: absolute;
-  top: 50%;
-  left: 10px;
-  transform: translateY(-50%);
-  font-size: 1.2rem;
-  color: #6c757d;
-}
-
-/* Para la palabra "Dorms." en el input de dormitorios */
-.dorms-wrapper {
-  position: relative;
-}
-
-.dorms-placeholder {
-  position: absolute;
-  top: 50%;
-  left: 40px; /* Ajuste según el diseño */
-  transform: translateY(-50%);
-  font-size: 14px;
-  color: #6c757d;
-}
-
-.dorms-dropdowns {
+.min-max-input {
   display: flex;
-  padding-left: 90px;
-  align-items: center;
-  border: 1px solid #000;
-  background-color: #fff;
+  width: 100px;
+  margin: 0 10px;
 }
-
-/* Para cocheras min/max */
-.garages-wrapper {
-  position: relative;
+.dorms-dropdowns{
+  display: flex;
+  justify-content: space-between;
 }
-
-.garages-placeholder {
-  position: absolute;
-  top: 50%;
-  left: 40px; /* Ajuste según el diseño */
-  transform: translateY(-50%);
-  font-size: 14px;
-  color: #6c757d;
-}
-
 .garages-dropdowns {
   display: flex;
-  padding-left: 80px;
-  align-items: center;
-  border: 1px solid #000;
-}
-
-.separator {
-  margin: 0;
-  font-size: 18px;
-  color: #6c757d;
-}
-
-.min-max-input {
-  width: 75px;
-  height: 38px;
-  border-radius: 0;
-  font-size: 14px;
-  border: 0;
-  color: #6c757d;
-  text-align: center;
-  margin-left: 10px;
-}
-
-.filter-input {
-  height: 40px;
-  border: 1px solid #000000;
-  border-radius: 0;
-  font-size: 14px;
-  color: #6c757d;
-}
-
-.search-button {
-  background-color: var(--secondary-color);
-  border: none;
-  border-radius: 0;
-  height: 40px;
-  width: 200px;
-  color: #ffffff;
-  font-weight: bold;
-}
-
-.search-button:hover {
-  background-color: var(--secondary-color);
-}
-.input-icon-wrapper {
-  position: relative;
-  width: 100%;
-}
-
-.input-with-icon {
-  padding-left: 40px;
-}
-
-.input-icon-placeholder {
-  position: absolute;
-  z-index: 1;
-  top: 50%;
-  left: 10px;
-  transform: translateY(-50%);
-  font-size: 1.2rem;
-  color: #6c757d;
-}
-
-.filter-input {
-  height: 40px;
-  border: 1px solid #000000;
-  border-radius: 0;
-  font-size: 14px;
-  color: #6c757d;
-}
-
-.search-button {
-  background-color: var(--secondary-color);
-  border: none;
-  border-radius: 0;
-  height: 40px;
-  width: 200px;
-  color: #ffffff;
-  font-weight: bold;
-}
-
-.search-button:hover {
-  background-color: var(--secondary-color)
-}
-
-.autocomplete-suggestions {
-  position: absolute;
-  width: 100%;
-  background: white;
-  z-index: 1000;
-  max-height: 200px;
-  overflow-y: auto;
-}
-
-.autocomplete-suggestions ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.autocomplete-suggestions li {
-  padding: 10px;
-  cursor: pointer;
-}
-
-.autocomplete-suggestions li:hover {
-  background-color: #f0f0f0;
-}
-
-.separator {
-  margin: 0 !important;
-  font-size: 18px;
-  color: #6c757d;
-}
-
-.min-max-input {
-  width: 40%;
-  height: 38px;
-  border-radius: 0;
-  font-size: 14px;
-  border: 0;
-  color: #6c757d;
-  text-align: center;
-}
-.btn-list-mobile {
-  display: none;
-}
-/* mobile */
-
-@media (max-width: 768px) {
-  .filter-form {
-    padding-top: 0;
-  }
-
-  .btn-list-mobile {
-    display: flex;
-    
-  }
- .price-order-mobile {
-  display: flex;
-  align-items: end;
- }
-  .search-button-filter {
-    display: none !important;
-  }
+  justify-content: space-between;
 }
