--- a/Client/src/pages/Admin/SideBar/SideBar.css
+++ b/Client/src/pages/Admin/SideBar/SideBar.css
@@ -20,9 +20,8 @@
     color: #ffffff;
     background-color:  var(--secondary-color);
     border: none;
+    border-radius: 10px;
 }
 .btn-logout:hover {
-    color: #000000;
-    background-color: #ffffff;
-    border: 1px solid #000000;
+    background-color: var(--primary-color);
 }
